Fixed responsive layout problems Addressed accessibility issues Updated readme

--- a/starter-code/index.css
+++ b/starter-code/index.css
@@ -73,13 +73,13 @@ p {
 }
 
 /* set up the body */
-body {
+html, body {
   font-family: var(--ff-sans-normal);
   font-size: var(--fs-400);
   color: hsl(var(--clr-white));
-  background: hsl(var(--clr-dark));
   line-height: 1.5;
   width: 100vw;
+  height: 100%;
   min-height: 100vh;
   overflow-x: hidden;
 }
@@ -133,21 +133,21 @@ a {
   display: block;
 }
 
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap; /* added line */
+  border: 0;
+}
 @media screen and (min-width: 37.5em) and (max-width: 62em) {
-  .sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap; /* added line */
-    border: 0;
-  }
 }
 
-/* .skip-to-content {
+.skip-to-content {
     position: absolute;
     z-index: 9999;
     background: hsl( var(--clr-white) );
@@ -160,7 +160,7 @@ a {
 
 .skip-to-content:focus {
     transform: translateY(0);
-} */
+}
 
 /* colors */
 
@@ -281,9 +281,9 @@ a {
   aspect-ratio: 1;
 }
 
-.navbar {
+/* .navbar {
   display: block;
-}
+} */
 
 .navToggle-btn {
   position: absolute;
@@ -304,12 +304,11 @@ a {
 }
 
 .navlist {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 70vw;
+  position: fixed;
+  inset: 0px 0px 0px 30%;
   height: 100vh;
   padding: 7rem 2.5rem 0;
+  margin: 0;
   background-color: hsl(var(--clr-white) / 0.05);
   backdrop-filter: blur(1.5em);
   transform: translateX(100%);
@@ -317,7 +316,7 @@ a {
   z-index: 9;
 }
 
-.showbar {
+.navlist[data-visible='true'] {
   transform: translateX(0);
 }
 
@@ -360,6 +359,7 @@ a {
 
   .navlist {
     position: relative;
+    inset: 0;
     width: 100%;
     height: 100%;
     display: flex;
@@ -409,6 +409,12 @@ a {
     background: hsl(var(--clr-white) / 0.25);
     order: 1;
     z-index: 999;
+  }
+}
+
+@media screen and (min-width: 37.5em) and (max-width: 62em) {
+  .navlist li span {
+    display: none;
   }
 }
 
